# weightlens

./: .gitignore  LICENSE  README.md  pyproject.toml  script.py
.github/workflows/: opencode.yml  publish.yml  test.yml
.opencode/agents/: code-review.md
.planning/thresholds-config/: PLAN.md  SPEC.md
artifacts/: Makefile  demo.tape  make_clean_ckpt.py
artifacts/checkpoints/: clean.pth  corrupted_spike.pth  corrupted_zero.pth
demo/: corrupt_ckpt.py  make_clean_ckpt.py  naive_load.py
demos/: Makefile  demo.tape
src/weightlens/: __init__.py  analyzer.py  categories.py  cli.py  histogram_quantiles.py  memory.py  models.py  p2_quantile.py  prefetch.py  tensor_utils.py
src/weightlens/aggregators/: __init__.py  streaming_global.py  streaming_global_aggregator.py  streaming_layer_metrics.py
src/weightlens/classifiers/: __init__.py  dcp.py  pytorch.py
src/weightlens/contracts/: __init__.py  checkpoint_validator.py  diagnostic_rule.py  global_aggregator.py  parameter_classifier.py  reporter.py  stats_engine.py  weight_source.py
src/weightlens/diagnostics/: __init__.py  rules.py
src/weightlens/formats/: __init__.py  safetensors_header.py  safetensors_index.py
src/weightlens/io/: __init__.py  byte_range.py  errors.py  materialize.py  uri.py
src/weightlens/reporters/: __init__.py  rich_reporter.py
src/weightlens/sources/: __init__.py  dcp.py  pytorch.py  safetensors.py
src/weightlens/stats_engines/: __init__.py  basic_stats_engine.py
src/weightlens/validators/: __init__.py  dcp_checkpoint.py  pytorch_checkpoint.py  pytorch_checkpoint_validator.py  safetensors.py
tests/: fixtures_realistic.py  fixtures_safetensors.py  test_analyzer.py  test_basic_stats_engine.py  test_bucketed_diagnostics.py  test_byte_range.py  test_cli.py  test_cli_dcp.py  test_cli_safetensors.py  test_dcp_parameter_classifier.py  test_dcp_source.py  test_dcp_validator.py  test_diagnostic_rules.py  test_hardening_cli.py  test_hardening_corruption.py  test_hardening_dtypes.py  test_hardening_golden.py  test_hardening_memory.py  test_hardening_remote_parity.py  test_hardening_sharding.py  test_layer_tensor.py  test_materialize.py  test_math_robustness.py  test_models.py  test_parallel_analyzer.py  test_parameter_classifier.py  test_performance_regression.py  test_prefetch.py  test_pytorch.py  test_pytorch_checkpoint.py  test_pytorch_checkpoint_validator.py  test_pytorch_weight_source.py  test_remote_access.py  test_rich_reporter.py  test_safetensors_header.py  test_safetensors_index.py  test_safetensors_s3.py  test_safetensors_source.py  test_safetensors_validator.py  test_streaming_global.py  (+4 more)
