[build-system]
requires = ["setuptools>=80.10.2","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weightlens"
version = "0.1.2"
description = "Statistical model analysis for ML model weights." 
readme = "README.md" 
requires-python = ">=3.11" 
license = { text = "MIT" } 

authors = [
    { name = "Akshath Mangudi" } 
]

dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.12.2",
    "rich>=14.2.0",
    "torch>=2.9.0"
]

keywords = [
    "machine-learning",
    "model-analysis",
    "weights",
    "pytorch"
]

[project.optional-dependencies]
remote = ["fsspec>=2024.6.0"]
s3 = ["fsspec>=2024.6.0", "s3fs>=2024.6.0"]
gcs = ["fsspec>=2024.6.0", "gcsfs>=2024.6.0"]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
    "mypy>=1.8",
    "pyright>=1.1",
    "fsspec>=2024.6.0",
    "safetensors>=0.4.0",
    "moto[server]>=5.0.0",
    "s3fs>=2024.6.0",
    "gcsfs>=2024.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lens = "weightlens.cli:main"

[tool.pytest.ini_options]
addopts = "-ra -m 'not integration'"
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: opt-in tests that need extra services (run with -m integration)"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["weightlens"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "tests"]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3.*", "s3fs.*", "moto.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportPrivateUsage = "none"
reportAttributeAccessIssue = "none"
reportUnusedImport = "warning"
